Cover Javassist ProxyFactory static field setup