@@ -16,6 +16,10 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs += ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+}
+
 graalvmNative {
     agent {
         defaultMode = "conditional"
@@ -23,6 +27,11 @@ graalvmNative {
             conditional {
                 userCodeFilterPath = "user-code-filter.json"
             }
+        }
+    }
+    binaries {
+        all {
+            buildArgs.add('--add-opens=java.base/java.lang=ALL-UNNAMED')
         }
     }
 }
